--- a/public/stylus/single-product.styl
+++ b/public/stylus/single-product.styl
@@ -11,11 +11,12 @@
 .single-product
 	max-width max-width
 	margin auto
-	padding 1rem .5rem
+	// padding 1rem .5rem
+	padding 1rem 0
 
 	&__title
 		text-align center
-		padding .5rem
+		padding 1rem
 		
 	&__artist
 		font-family 'Roboto Condensed'
@@ -24,7 +25,7 @@
 		display flex
 		align-items center
 		justify-content center
-		padding 0 .5rem
+		padding 0 1rem
 		.avatar
 			max-width 2.5rem
 			margin 0 .5em
@@ -39,14 +40,22 @@
 		&__image
 			padding .5rem
 			img
-				// max-width 300px
 				width auto
+				max-width 100%
 				margin auto
 				display block
 		&__data
 			.actions
 				padding .5rem
+				.actions__title
+					color #444
+					font-family 'Roboto Condensed'
+					padding .5rem
+					font-size 1rem
+					text-transform uppercase
 				.actions__social
+					padding 0 .5rem
+					padding-top 1rem
 					display flex
 					justify-content space-between
 					align-items center
@@ -55,11 +64,13 @@
 						font-size 1.5rem
 						font-weight 700
 				.actions__buy
-					margin 1rem 0
+					margin 1rem .5rem
 				.actions__people
 					display flex
 					flex-wrap wrap
 					justify-content center
+					padding 0 .4rem
+					padding-bottom .5rem
 					.people-item
 						padding .1rem
 						img
@@ -69,10 +80,25 @@
 				.actions__more
 					display flex
 					flex-wrap wrap
-					.product-image
-						flex 1 50%
-						padding .5rem
+	
+	&__similar
+		.actions-title
+			color #444
+			font-family 'Roboto Condensed'
+			padding 0 1rem
+			margin-top 1rem
+			font-size 1.25rem
+			text-transform uppercase
+			letter-spacing 1px
+
+.more-image
+	flex 1 50%
+	padding .5rem
 										
+@media (min-width: 540px)
+	.more-image
+		flex 1 33.333%
+
 @media (min-width: tablet)
 	.single-product
 		&__header
@@ -81,8 +107,6 @@
 		&__info
 			display flex
 			justify-content center
-			// align-items center
-			// align-items flex-start
 			max-width 800px
 			margin auto
 			&__image
@@ -91,13 +115,6 @@
 				flex 1
 				.actions
 					border solid 1px #ccc
-					margin .5rem
-					&:nth-child(1)
-					&:nth-child(2)
-						padding 1rem
-					
-// @media (min-width: desktop)
-// 	.single-product
-// 		&__info
-// 			&__image
-// 				flex 2
+					margin .5rem 1rem
+	.more-image
+		flex 1 50%
