no max-width to 800px in single product

--- a/public/stylus/single-product.styl
+++ b/public/stylus/single-product.styl
@@ -107,11 +107,12 @@
 		&__info
 			display flex
 			justify-content center
-			max-width 800px
-			margin auto
+			// max-width 800px
+			// margin auto
 			&__image
 				flex 1.5
 			&__data
+				max-width 350px
 				flex 1
 				.actions
 					border solid 1px #ccc
