--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -598,6 +598,14 @@ body {
   color: #f54545;
   display: none;
 }
+.button-like.active .fa-heart,
+.button-wish-list.active .fa-heart {
+  display: inline;
+}
+.button-like.active .fa-heart-o,
+.button-wish-list.active .fa-heart-o {
+  display: none;
+}
 .profile {
   background: #f6f6f6;
   overflow: hidden;
