--- a/public/css/works.css
+++ b/public/css/works.css
@@ -660,6 +660,14 @@ body {
   color: #f54545;
   display: none;
 }
+.button-like.active .fa-heart,
+.button-wish-list.active .fa-heart {
+  display: inline;
+}
+.button-like.active .fa-heart-o,
+.button-wish-list.active .fa-heart-o {
+  display: none;
+}
 .section__title {
   margin: auto;
   padding: 1rem;
