--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -14,7 +14,7 @@
 			<div class="product-info">
 				<div class="price">s./{{product.price}}</div>
 				<div class="like">
-					<span class="button-like"> <i class="fa fa-heart-o"></i> <span>{{product.likes}}</span> </span>
+					<span class="button-like {% if product.liked %}active{% endif %}"> <i class="fa fa-heart"></i><i class="fa fa-heart-o"></i> <span>{{product.likes}}</span> </span>
 				</div>
 				<div class="wish-list">
 					<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
