--- a/app/views/partials/users.html
+++ b/app/views/partials/users.html
@@ -5,7 +5,7 @@
 	{% for user in users %}
 	<div class="user-wrapper">
 		<article class="user">
-			<a class="user-header" href="#">
+			<a class="user-header" href="{{ user.url }}">
 				<div class="avatar">
 					<img src="{{ user.photo }}">
 				</div>
@@ -16,7 +16,7 @@
 			</a>
 			<div class="user-works">
 				{% for work in user.Works %}
-					<div class="work" style="background-image: url('{{ work.photo }}');"></div>
+					<a class="work" href="{{ work.url }}" style="background-image: url('{{ work.photo }}');"></a>
 				{% endfor %}
 				
 				{% if user.Works.length < 6 %}
@@ -47,7 +47,7 @@
 						<span class="button-liner__action folllow">Seguir</span>
 						<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
 						<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
-						<span class="button-liner__number">{{ user.followers }}</span>
+						<span class="button-liner__number">{{ user.numOfFollowers }}</span>
 					</button>
 			</div>
 		</article>
