--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -116,3 +116,11 @@
 	.fa-heart
 		color #f54545
 		display none
+		
+.button-like
+.button-wish-list
+	&.active
+		.fa-heart
+			display inline
+		.fa-heart-o
+			display none
