--- a/public/css/single-product.css
+++ b/public/css/single-product.css
@@ -606,6 +606,13 @@ body {
 .button-wish-list.active .fa-heart-o {
   display: none;
 }
+.button-avatar {
+  max-width: 2.5rem;
+}
+.button-avatar img {
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
 .products {
   margin: 0.5rem;
   display: -webkit-box;
