--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -124,3 +124,12 @@
 			display inline
 		.fa-heart-o
 			display none
+			
+			
+/*------------------------------------*
+	$ AVATAR
+*------------------------------------*/
+.button-avatar
+	max-width 2.5rem
+	img
+		border-radius 50%
