--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -665,6 +665,13 @@ body {
 .button-wish-list.active .fa-heart-o {
   display: none;
 }
+.button-avatar {
+  max-width: 2.5rem;
+}
+.button-avatar img {
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
 .auth-container {
   margin: auto;
   max-width: 400px;
