--- a/public/css/works.css
+++ b/public/css/works.css
@@ -668,6 +668,13 @@ body {
 .button-wish-list.active .fa-heart-o {
   display: none;
 }
+.button-avatar {
+  max-width: 2.5rem;
+}
+.button-avatar img {
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
 .section__title {
   margin: auto;
   padding: 1rem;
