--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -23,7 +23,7 @@
 						<span class="button-liner__action folllow">Seguir</span>
 						<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
 						<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
-						<span class="button-liner__number">{{ data[5].followers }}</span>
+						<span class="button-liner__number">{{ profile.numOfFollowers }}</span>
 					</button>
 			</div>
 		</div>
