--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -1,4 +1,4 @@
-{% extends 'partials/base.html' %}
+{% extends '../partials/base.html' %}
 
 {% set path = 'index' %}
 {% set title = 'Arte Manifiesto' %}
