antes de pulear

--- a/app/views/partials/auth.html
+++ b/app/views/partials/auth.html
@@ -79,7 +79,7 @@
 					<span class="line"></span>
 				</p>
 
-				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
+				<input class="input" data-size='large' name="email" placeholder="Email" type="email">
 
 				<input class="input" data-size='large' name="password" placeholder="Contraseña" type="password">
 
