--- a/public/css/add-work.css
+++ b/public/css/add-work.css
@@ -613,3 +613,97 @@ body {
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
+.input {
+  font-size: 1rem;
+  padding: 0.5em;
+  color: #555;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+.input:focus {
+  border-color: rgba(82,168,236,0.8);
+  -webkit-box-shadow: 0 0 8px rgba(82,168,236,0.6);
+  box-shadow: 0 0 8px rgba(82,168,236,0.6);
+}
+.input[data-size='large'] {
+  font-size: 1.15rem;
+}
+.search {
+  position: relative;
+}
+.search input {
+  width: 100%;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 0.5em 0 0.5em 2em;
+  color: #555;
+  font-size: 1rem;
+}
+.search i {
+  position: absolute;
+  top: 0.5rem;
+  left: 0.75em;
+  color: #808080;
+}
+.search .options {
+  display: none;
+  font-family: 'Raleway';
+  border: solid 1px #ddd;
+  color: #333;
+  margin: auto;
+}
+.search .options.visible {
+  display: block;
+}
+.search .options .option {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+.search .options .option.selected {
+  background: #ededed;
+}
+.search .options .option .search-text {
+  font-weight: 600;
+}
+.search .options .option:not(:last-child) {
+  border-bottom: solid 1px #ddd;
+}
+.search .options .option:hover {
+  background: #ededed;
+}
+.add-work {
+  max-width: 1100px;
+  margin: auto;
+}
+.add-work__data {
+  margin: 0.5rem;
+}
+.work-data__input {
+  margin: 0.5rem;
+}
+@media (min-width: 920px) {
+  .work-data {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    -o-box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .work-data__input {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 50%;
+    -ms-flex: 1 50%;
+    flex: 1 50%;
+  }
+}
