--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -11,7 +11,7 @@
 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/{{css}}.css">
-
+	{% block stylesheets %}{% endblock %}
 </head>
 <body>
 
