--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -55,7 +55,7 @@
 				</div>
 				<div class="work-data__input">
 					<p class="title">Descripcion</p>
-					<textarea class="input" style="resize:none" placeholder="Descipcion, hagalo en 140 caracteres"></textarea>
+					<textarea class="input description" style="resize:none" placeholder="Descipcion, hagalo en 140 caracteres"></textarea>
 				</div>
 				<div class="work-data__input">
 					<p class="title">Categorias</p>
