--- a/public/stylus/add-work.styl
+++ b/public/stylus/add-work.styl
@@ -21,12 +21,28 @@
 			margin .25rem 0
 		.checkbox-list
 			margin .25rem 0
+			
+
+.upload-images
+	display flex
+	justify-content center
+	.upload-image
+		height 300px
+		width 300px
+		margin 1rem
+		display flex
+		img
+			width auto
+			max-width 100%
+			max-height 100%
+			// margin auto
+			// max
+	
 
 .work-data
 	&__input
 		padding .5rem
-			
-			
+		
 @media (min-width: desktop)
 	.work-data
 		display flex
@@ -59,9 +75,3 @@
 	font-size .8rem
 	label
 		padding-right .5rem
-		
-
-.upload-images
-	display flex
-	justify-content center
-	margin 1rem
