antes de pulear

--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -12,7 +12,7 @@
 	<script type="text/template" id="template">
 		<div class="product-wrapper">
 			<article class="product">
-				<a class="product-image" href="/<%= User.username %>/product/<%=nameSlugify %>">
+				<a class="product-image" href="<%= url %>">
 					<img src="<%= photo %>">
 				</a>
 				<div class="product-title">
