--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -16,9 +16,9 @@
 				<div class="like">
 					<span class="button-like {% if product.liked %}active{% endif %}"> <i class="fa fa-heart"></i><i class="fa fa-heart-o"></i> <span>{{product.likes}}</span> </span>
 				</div>
-				<div class="wish-list">
+				<!-- <div class="wish-list">
 					<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
-				</div>
+				</div> -->
 			</div>
 		</article>
 	</div>
